# vertex-pipeline-starter-kit

./: pyproject.toml
vertex/deployment/: Dockerfile
vertex/pipelines/: my_first_pipeline.py
