[tool.poetry]
name = "vertex-pipeline-starter-kit"
version = "0.1.0"
description = ""
authors = ["Ludovic <ludovic.arnaud@vinci-airports.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13.0"
google-cloud-bigquery = {version = ">=3.0,<4.0", extras = ["pandas"]}
google-cloud-logging = ">=3.0,<4.0"
pandas = "^2.1.4"
fsspec = "^2023.12.2"
gcsfs = "^2023.12.2.post1"
pandas-gbq = "^0.20.0"


[tool.poetry.group.dev.dependencies]
kfp = "^2.6.0"
google-cloud-aiplatform = "^1.39.0"
mkdocs = "^1.5.3"
mkdocs-techdocs-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
